source/postcard-dyn/src/snapshots/postcard_dyn__ser__test__insta_TupStruct1.snap
---
source: source/postcard-dyn/src/ser.rs
expression: "TupStruct1 :: SCHEMA"
---
NamedType {
    name: "TupStruct1",
    ty: NewtypeStruct(
        NamedType {
            name: "u8",
            ty: U8,
        },
    ),
}
