source/postcard-dyn/src/snapshots/postcard_dyn__ser__test__insta_TupStruct2.snap
---
source: source/postcard-dyn/src/ser.rs
expression: "TupStruct2 :: SCHEMA"
---
NamedType {
    name: "TupStruct2",
    ty: TupleStruct(
        [
            NamedType {
                name: "u8",
                ty: U8,
            },
            NamedType {
                name: "u8",
                ty: U8,
            },
        ],
    ),
}
