source/postcard-dyn/src/snapshots/postcard_dyn__ser__test__insta_UnitStruct.snap
---
source: source/postcard-dyn/src/ser.rs
expression: "UnitStruct :: SCHEMA"
---
NamedType {
    name: "UnitStruct",
    ty: UnitStruct,
}
